--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,10 @@
       <div class="footer-col footer-col-3">
         <p>{{- site.description | escape -}}</p>
       </div>
-	  	<p> <small>&copy; Copyright 2019, Tony Pan</small> </p>
+	  <br></br>
+		<hr align="center" width="50%">
+			<p> <small>&copy; Copyright 2019, Tony Pan</small> </p>
+		</hr>
     </div>
   </div>
 </footer>
