--- a/main.css
+++ b/main.css
@@ -85,10 +85,25 @@ body {
     border-radius: 50%;
   }
 
-    /*--- education background image ---*/
+    /*--- education ---*/
     .education {
       background-image: url('images/education.jpg');
       background-size: cover;
       background-position: center;
       position: relative;
+    }
+    .course-description {
+      left: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -55%);
+      text-align: center;
+    }
+    .course-description h1 {
+      color: #cbe009;
+    }
+    .course-description p {
+      color: rgb(255, 255, 255);
+      font-size: 1.0rem;
+      line-height: 1.2;
     }
