--- a/main.css
+++ b/main.css
@@ -120,6 +120,9 @@ body {
     .btn {
       font-size: 0.9rem;
     }
+    .btn-link {
+      color: #0b488a;
+    }
 
     /*--- research ---*/
     .research {
@@ -148,7 +151,6 @@ body {
 
     /*--- programming ---*/
     .programming {
-      background-image: url('images/programming.jpg');
       background-size: cover;
       background-position: center;
       position: relative;
