--- a/main.css
+++ b/main.css
@@ -415,3 +415,45 @@ body {
   background-position: center;
   position: relative;
 }
+
+.button-glow {
+  background-color: #004A7F;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  border: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Arial;
+  font-size: 20px;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  -webkit-animation: glowing 1500ms infinite;
+  -moz-animation: glowing 1500ms infinite;
+  -o-animation: glowing 1500ms infinite;
+  animation: glowing 1500ms infinite;
+}
+@-webkit-keyframes glowing {
+  0% { background-color: rgb(0, 18, 178); -webkit-box-shadow: 0 0 3px rgb(33, 0, 178); }
+  50% { background-color: rgb(25, 0, 255); -webkit-box-shadow: 0 0 40px rgb(25, 0, 255); }
+  100% { background-color: rgb(0, 18, 178); -webkit-box-shadow: 0 0 3px rgb(0, 18, 178); }
+}
+
+@-moz-keyframes glowing {
+  0% { background-color: rgb(12, 0, 178); -moz-box-shadow: 0 0 3px rgb(62, 0, 178); }
+  50% { background-color: rgb(25, 0, 255); -moz-box-shadow: 0 0 40px rgb(25, 0, 255); }
+  100% { background-color: rgb(0, 18, 178); -moz-box-shadow: 0 0 3px rgb(0, 18, 178); }
+}
+
+@-o-keyframes glowing {
+  0% { background-color: rgb(47, 0, 178); box-shadow: 0 0 3px rgb(68, 0, 178); }
+  50% { background-color: rgb(25, 0, 255); box-shadow: 0 0 40px rgb(25, 0, 255); }
+  100% { background-color: rgb(0, 18, 178); box-shadow: 0 0 3px rgb(0, 18, 178); }
+}
+
+@keyframes glowing {
+  0% { background-color: rgb(27, 0, 178); box-shadow: 0 0 3px rgb(27, 0, 178); }
+  50% { background-color: rgb(25, 0, 255); box-shadow: 0 0 40px rgb(25, 0, 255); }
+  100% { background-color: rgb(0, 18, 178); box-shadow: 0 0 3px rgb(0, 18, 178); }
+}
