--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
     padding: 0;
     margin: 0;
     background: #01313a;
+    font-family: 'Roboto', sans-serif;
   }
   html {
     scroll-behavior: smooth;
