--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
   }
   .nav-link,
   .navbar-brand {
-    color: rgb(116, 102, 102);
+    color: rgb(130, 180, 238);
     cursor: pointer;
   }
   .nav-link {
@@ -25,8 +25,8 @@ body {
   }
   .navbar-collapse {
     justify-content: flex-end;
-  }
-    
+  } 
+
   /*--- background image ---*/
   .header {
     background-image: url('images/header-background.jpg');
@@ -52,7 +52,7 @@ body {
     text-align: center;
   }
   .description h1 {
-    color: #6ab446;
+    color: #faf612;
   }
   .description p {
     color: rgb(255, 255, 255);
@@ -394,7 +394,7 @@ body {
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
-  background-color: rgb(90, 45, 45); /* Set a background color */
+  background-color: rgba(143, 11, 155, 0.733); /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 5px; /* Some padding */
@@ -457,4 +457,13 @@ body {
   0% { background-color: rgb(27, 0, 178); box-shadow: 0 0 3px rgb(27, 0, 178); }
   50% { background-color: rgb(25, 0, 255); box-shadow: 0 0 40px rgb(25, 0, 255); }
   100% { background-color: rgb(0, 18, 178); box-shadow: 0 0 3px rgb(0, 18, 178); }
+}
+
+.list-group-item {  
+  background-color: rgb(22, 74, 189);
+  color: rgb(199, 197, 197)
+}
+
+#title {
+  color: rgb(19, 124, 223);
 }
